# LearnGL

./: .gitignore  README.md
1.Basics/: .gitignore  CMakeLists.txt  Camera.h  LearnGL.cpp  README.md  Shader.h  Texture.h  Transforms.h  Triangle.h  Vertices.h
1.Basics/Lighting/: CMakeLists.txt  Lighting.cpp  Lighting.h
2.Lighting/: CMakeLists.txt  Camera.h  Draw.h  Lighting.cc  README.md  Vertices.h  color.fs.glsl  color.vs.glsl  light.vs.glsl
